k8s/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  type: ClusterIP
  selector:
    app: client-pod
  ports:
  - port: 4200
    targetPort: 4200
