k8s/ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
  labels:
    name: myingress
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/?(.*)"
          backend:
            service:
              name: client
              port: 
                number: 4200
        - pathType: Prefix
          path: "/fib/?(.*)"
          backend:
            service:
              name: server
              port: 
                number: 8080
